# uepy

./: README.md  pyproject.toml
tests/: test_client.py  test_locator.py
uepy/: __init__.py  cli.py  client.py  errors.py  locator.py  queries.py
