[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uepy"
version = "0.1.0"
description = "A small CLI and Python client for Unreal Editor remote Python execution."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "uepy contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.scripts]
uepy = "uepy.cli:main"

[tool.setuptools]
packages = ["uepy"]

